language/move-prover/tests/sources/functional/serialize_model.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/serialize_model.move:34:9 ───
    │
 34 │         ensures result_1 == result_2;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/serialize_model.move:26:5: bcs_test1_incorrect
    =         v1 = <redacted>,
    =         v2 = <redacted>,
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/serialize_model.move:28:23: bcs_test1_incorrect
    =     at tests/sources/functional/serialize_model.move:29:23: bcs_test1_incorrect
    =     at tests/sources/functional/serialize_model.move:30:9: bcs_test1_incorrect
